# Test

src/Desktop/: main.py  pyproject.toml
src/Firmware/ESP32/: .gitignore  platformio.ini
src/Firmware/ESP32/src/: test.cpp
src/Firmware/Nano/: platformio.ini
