[tool.poetry]
name = "desktop"
version = "0.1.0"
description = ""
authors = ["FREDDBEAR-95 <mr.egor.dmitriev.2017@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
vosk = "^0.3.45"
silero = "^0.4.1"
asyncio = "^3.4.3"
fuzzywuzzy = "^0.18.0"
sounddevice = "^0.5.0"
loguru = "^0.7.2"
pyqt6 = "^6.7.1"
silero-vad = "5.1"
numpy = "2.0"
numba = "^0.60.0"
num2t4ru = {git = "https://github.com/seriyps/ru_number_to_text"}
torch = {version = "^2.4.1+cu118", source = "pytorch-gpu"}
torchaudio = {version = "^2.4.1+cu118", source = "pytorch-gpu"}


[[tool.poetry.source]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
